@@ -328,7 +328,13 @@ define function, begin
 319,formationprobability,2,0,0 #returns (as percentage) formation being picked from formation set probability
 320,currenttextbox,0          #currently displayed textbox or -1
 321,getherospeed,1,0          #hero walk speed (hero)
-
+322,load hero sprite,2,0,-1   #load hero sprite (number, palette)
+323,free sprite, 1, 0         #frees a sprite (id)
+324,place sprite, 3, 0, 0, 0  #move a sprite(id, x, y)
+325,set sprite visible,2,0,0  #change sprite visibilty(id, vis)
+326,set sprite palette,2,0,0  #set sprite palette(id, pal)
+327,replaceherosprite,3,0,0,-1#replaces the sprite with a hero sprite (id, num, pal)
+328,set sprite frame,2,0,0    #what it says on the tin(id, num)
 #2xx,getnpcraw,2,0,0          #raw npc data(who,which)
 #2xx,setnpcraw,3,0,0,0        #raw npc data(who,which,val)
 end
